--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.security.user.name=james
-spring.security.user.password=1234
-
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:cert.p12
 server.ssl.key-store-password=1234
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/userDB
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
 logging.level.org.springframework.security=TRACE
+spring.sql.init.mode=always
